--- a/src/components/Highlights/Highlights.css
+++ b/src/components/Highlights/Highlights.css
@@ -4,18 +4,19 @@
 }
 .title_spec{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 .title_spec h4{
     width: 26rem;
     font-size: 2.5rem;
-    font-family: var(--font-p);
+    font-family:"Karla";
+    line-height: 46px;
 }
 .specials-Card{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     gap:1rem;
     width: 100%;
     margin: 0 auto;
@@ -55,7 +56,8 @@
 }
 .Card-price{
     color: var(--Or);
-    font-weight: 600;
+    font-family: 'Karla';
+    font-weight: 700;
 }
 .Card-description{
     color: var(--Gry);
