--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,4 +1,10 @@
+.testimo {
+    padding:2rem;
+    margin: 2rem -10rem 0 -10rem;
+    background-color: var(--Gr);
+}
 .title_test h1{
+    font-size: 3rem;
    font-weight: 500;
    line-height: 43px;
    text-align: center;
@@ -6,10 +12,20 @@
 .Clients{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap:1rem;
-    width: 100%;
-    margin: 0 auto;
+    justify-content: center;
+    gap:5rem;
+    margin:1rem 10rem;
+    
+}
+.Ratting{
+    margin: 2rem 0;
+}
+.Ratting span{
+    color: yellow;
+}
+.photo img{
+    width:3rem; 
+    height:3rem;
 }
 .card-profile{
     align-items: flex-start;
@@ -17,4 +33,5 @@
 .profile{
     display: flex;
     justify-content: center;
+    gap: 1rem;
 }
