--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,16 @@
   --Gr: #fbdabb;
   --Wh: #edefee;
   --Gry: #333333;
+  
 }
 :root {
   --font-p: "Markazi Text";
   --font-s: "Karla";
+  
+}
+html{
+  margin: 0;
+  padding: 0;
 }
 body {
   font-family: var(--font-p);
@@ -43,7 +49,7 @@ body {
     width: 50rem;
 } 
 body{
-  margin:0 2rem;
+  margin:0
 }
 
 }
