--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -1,7 +1,7 @@
 .About {
   background-color: var(--primary);
-  margin: 0 -10em 6em -10em;
-  padding: 2em 10em 0 10em;
+  margin: 0 -15rem 6em -15rem;
+  padding: 3em 10em;
   display: flex;
   
   justify-content: space-between;
