--- a/src/components/Home/Hero/Hero.css
+++ b/src/components/Home/Hero/Hero.css
@@ -1,7 +1,7 @@
 .Hero {
   background-color: var(--primary);
-  margin: 0 -10em 6em -10em;
-  padding: 0 10em;
+  margin:  0 -15rem 5rem -15rem;
+  padding: 0 15rem;
   display: flex;
   justify-content: space-between;
 }
