--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -3,8 +3,8 @@
   margin: 0 -15rem 6em -15rem;
   padding: 3em 15em;
   display: flex;
-  
   justify-content: space-between;
+  gap:25rem;
 }
 .title_description {
   padding: 2em 0;
