--- a/src/components/Reservation/BookingForm/bookingform.css
+++ b/src/components/Reservation/BookingForm/bookingform.css
@@ -43,11 +43,26 @@
     width: 90%;
     margin: 0 auto;
 }
+.form-row p{
+    color:red;
+    font-size: 12px;
+    margin: 0 ;
+    
+}
+.number-input-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 -3;
+  height: 3rem;
+}
+
+form .number-input-container{
+width: 100%;
+margin: 15px 12px;
+padding: 5px;
+}
 form select, form input{
     display: block;
-    width: 100%;
-    margin: 15px 12px;
-    padding: 5px;
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
     outline: none;
@@ -62,7 +77,9 @@ form input[type = submit]{
     color: #fff;
     background:var(--primary);
     padding: 12px 0;
+    margin: 1rem;
     border-radius: 4px;
+    width: 100%;
     cursor: pointer;
 }
 form input[type = submit]:hover{
