--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
   color: rgb(3, 3, 3);
   padding: 1rem;
 }
@@ -23,6 +22,7 @@
 .footer-nav {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
   list-style: none;
   margin: 0;
@@ -72,6 +72,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: center;
 }
 
 .footer-social-list li {
@@ -91,16 +92,14 @@
 }
 
 /* Media Queries */
-@media only screen and (max-width: 600px) {
-  .footer-nav {
-    flex-wrap: wrap;
-  }
-
-  .footer-nav a {
-    flex-basis: 100%;
-  }
-
+@media only screen and (max-width: 812px) {
+ .footer-nav-container {
+  display: none;
+}
   .footer-social-list {
     flex-wrap: wrap;
   }
+  .footer-container {
+  margin: 0 -4rem;
+}
 }
