--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -35,7 +35,6 @@ gap: 28px;
   cursor: pointer;
   width: 2rem;
   height: 2rem;
-  
   justify-content: space-around;
   flex-flow: column nowrap;
   z-index: 10;
@@ -46,22 +45,40 @@ gap: 28px;
 }
 
 .bar {
- width: 1rem;
-  height: 0.15rem;
+  width: 1rem;
+  height: 0.11rem;
   border-radius: 10px;
   background-color: black;
-  transform-origin: 1px;
-  transition: all 0.1 linear;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-  -webkit-transition: all 0.1 linear;
-  -moz-transition: all 0.1 linear;
-  -ms-transition: all 0.1 linear;
-  -o-transition: all 0.1 linear;
 }
-
+.bar_close_1{
+  background-color: black;
+   position: relative;
+    width: 2.1rem;
+    height: 0.11rem;
+    top: 0.39rem;
+    right: 0.5rem;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+}
+.bar_close_3{
+  background-color: black;
+  position: relative;
+    width: 2.1rem;
+    height: 0.11rem;
+    top: -0.39rem;
+    right: 0.5rem;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+}
+.bar_close_2{
+  display: none;
+}
 @media (max-width: 812px) {
   .nav {
     display: none;
