--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
   --Gr: #fbdabb;
   --Wh: #edefee;
   --Gry: #333333;
+  font-family:'Markazi Text', 'Karla', serif; ;
   
 }
 :root {
@@ -21,9 +22,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-.container{
-  margin: 0 15rem;
-}
+
 .button_Y{
   font-family: var(--font-s);
   font-weight: 400;
@@ -67,9 +66,6 @@ body {
     justify-content: space-around;
     width: 50rem;
 } 
-.container{
-  margin: 0 3rem ;
-}
 
 }
 @media only screen and (max-width: 340px)  {
@@ -77,9 +73,7 @@ body {
 .clients{
   margin: 0 10rem;
 }
-.container{
-  margin: 0 3rem;
-}
+
 }
 
 
