--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,14 @@
+.footer{
+  background-color: var(--primary);
+  margin: 0 -2rem 0 0;
+}
 .footer-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: rgb(3, 3, 3);
+  color: white;
   padding: 1rem;
+  background-color: var(--primary);
 }
 
 .logo-container {
@@ -12,10 +17,12 @@
 }
 
 .footer-logo {
-  max-width: 100%;
+  width: 10rem;
 }
 
 .footer-nav-container {
+ 
+  font-weight: 900;
   flex: 1;
 }
 
@@ -30,9 +37,10 @@
 }
 
 .footer-nav a {
-  color: rgb(11, 11, 11);
+ color: white;
   text-decoration: none;
   padding: 0.5rem;
+  font-family: "karla";
 }
 
 .footer-nav a:hover {
@@ -87,7 +95,7 @@
 
 .footer-copyright {
   text-align: center;
- 
+ color: white;
   padding: 0.5rem;
 }
 
@@ -99,7 +107,5 @@
   .footer-social-list {
     flex-wrap: wrap;
   }
-  .footer-container {
-  margin: 0 -4rem;
-}
+
 }
