--- a/src/components/order/order.css
+++ b/src/components/order/order.css
@@ -6,7 +6,7 @@
     text-align: center;
   }
   .text-section{
-    padding: 10rem;
+    padding: 5% 25%;
   }
   .text-section h1{
     color: white;
