--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
 .footer-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+ 
   color: white;
   padding: 1rem;
   background-color: var(--primary);
@@ -21,7 +21,6 @@
 }
 
 .footer-nav-container {
- 
   font-weight: 900;
   flex: 1;
 }
@@ -41,6 +40,7 @@
   text-decoration: none;
   padding: 0.5rem;
   font-family: "karla";
+  font-size: 1.4rem;
 }
 
 .footer-nav a:hover {
@@ -50,16 +50,25 @@
 .footer-contact-container {
   flex: 1;
   text-align: center;
+  margin-left: 1rem;
 }
 
 .footer-contact h4 {
-  margin-bottom: 0.5rem;
+ font-size: 3rem;
+ margin: 0;
+ text-align: center;
 }
 
 .footer-contact-list {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: left;
+  font-size: 1.2rem;
+}
+.footer-contact-list span{
+  font-size: 1.4rem;
+  color:rgb(203, 200, 92);
 }
 
 .footer-contact-list li {
@@ -69,10 +78,14 @@
 .footer-social-container {
   flex: 1;
   text-align: center;
+  width: 2rem;
+  
 }
 
 .footer-social h4 {
   margin-bottom: 0.5rem;
+  font-size: 3rem;
+  margin: 0;
 }
 
 .footer-social-list {
@@ -89,13 +102,14 @@
 
 .social-icon {
   color: rgb(0, 0, 0);
-  font-size: 1.5rem;
+  font-size: 5rem;
   text-decoration: none;
 }
 
 .footer-copyright {
   text-align: center;
  color: white;
+ font-size: 2.2rem;
   padding: 0.5rem;
 }
 
