--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,9 +3,20 @@
   justify-content: space-between;
   gap: 2rem;
   align-items: center;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
   height: 2rem;
-  margin: 0 2rem;
+  
+}
+.scroll{
+position: sticky;
+top: 0;
+translate: 0;
+transition-property:all;
+transition-duration: 0.2s;
+transition-timing-function: ease-in-out;
+z-index: 10;
+background-color: white;
+
 }
 .Header img{
   margin-left: 2rem;
@@ -34,16 +45,7 @@ gap: 28px;
   background-color: var(--secondary);
   font-weight:bolder
 }
-.nav.open {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 4rem;
-    right: 0%;
-    background-color: white;
-    width: 100%;
-    padding: 2rem 0;
-}
+
 
 .hamburger-menu {
   display: none;
@@ -56,7 +58,7 @@ gap: 28px;
 }
 
 .hamburger-menu.open {
-  display: flex;
+  display: none;
 }
 
 .bar {
@@ -98,6 +100,20 @@ gap: 28px;
   .nav {
     display: none;
   }
+  .hamburger-menu.open {
+  display: flex;
+}
+.nav.open {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 4rem;
+    right: 0%;
+    background-color: white;
+    width: 100%;
+    padding: 2rem 0;
+}
+
   .hamburger-menu {
   width: 3rem;
   height: 2.5rem;
