--- a/src/components/Reservation/BookingForm/confirmedBooking.css
+++ b/src/components/Reservation/BookingForm/confirmedBooking.css
@@ -11,7 +11,8 @@
     border-radius: 0.5rem;
   }
 .text-section{
-    background-image: url("../../../images/reservation/food5.jpeg");
+    background:url("../../../images/reservation/food5.jpeg") no-repeat ;
+    background-size: cover;
     height: auto;
     padding: 5rem;
     
