--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Karla:ital@1&family=Markazi+Text&display=swap');
+
 * {
   --primary: #495e57;
   --secondary: #f4ce14;
@@ -9,8 +12,8 @@
   
 }
 :root {
-  --font-p: "Markazi Text";
-  --font-s: "Karla";
+  --font-p: 'Markazi Text', serif;;
+  --font-s: 'Karla', sans-serif;
   
 }
 html{
@@ -25,7 +28,7 @@ body {
 
 .button_Y{
   font-family: var(--font-s);
-  font-weight: 400;
+  font-weight: 600;
   font-size: 18px;
   line-height: 21px;
   height: fit-content;
@@ -37,6 +40,7 @@ body {
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
   padding: 0.5rem 1.4rem;
+  cursor: pointer;
 }
 .background-image {
   background-image: url('./images/Under/coming-soon.jpg');
