feature(web/Little Lemon Restaurant):fix spinner,add clients comment style, fix navigation bar

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,6 +45,11 @@ gap: 28px;
   background-color: var(--secondary);
   font-weight:bolder
 }
+.nav a:focus{
+  background-color: var(--secondary);
+  font-weight:bolder;
+  color: beige;
+}
 
 
 .hamburger-menu {
