--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -72,22 +72,23 @@ border-radius: 45px;
 }
 
 /* Media Queries */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 860px) {
 .About {
 flex-wrap: wrap;
 padding: 3em 1rem;
 }
 .title_description {
-width: 100%;
+margin-left: 10rem;
 }
 .title_description h1 {
-font-size: 2rem;
+font-size: 4rem;
 }
 .title_description h2 {
-font-size: 1.5rem;
+font-size: 3rem;
 }
 .title_description p {
-font-size: 1.2rem;
+font-size: 1.5rem;
+margin-top: 2rem;
 }
 .two_img img {
 width: 40%;
