--- a/src/components/Home/Hero/Hero.css
+++ b/src/components/Home/Hero/Hero.css
@@ -29,10 +29,10 @@
 .Hero_description p {
   font-family: var(--font-s);
   font-weight: 400;
-  font-style: oblique;
+  font-style:italic;
   font-size: 1.5rem;
   color: var(--Wh);
-  margin: 1 0 0 0;
+  
 }
 
 .Rest_img {
@@ -43,9 +43,14 @@
   width: 100%;
   height: 26rem;
   padding: 3rem;
-  border-radius: 45px;
-  -webkit-border-radius: 45px;
-  -moz-border-radius: 45px;
-  -ms-border-radius: 45px;
-  -o-border-radius: 45px;
+  border-radius:75px;
+  -webkit-border-radius:75px;
+  -moz-border-radius:75px;
+  -ms-border-radius:75px;
+  -o-border-radius:75px;
+}
+@media only screen and (max-width: 860px){
+  .Hero_description{
+    margin-left: -10rem;
+  }
 }
