--- a/src/components/Reservation/BookingForm/bookingform.css
+++ b/src/components/Reservation/BookingForm/bookingform.css
@@ -34,7 +34,7 @@
 .card-content h3{
     text-align: center;
     color: #000;
-    font-size:1.6rem;
+    font-size:1.9rem;
     font-weight: 500;
     line-height:10px;
 }
@@ -45,7 +45,7 @@
 }
 .form-row p{
     color:red;
-    font-size: 12px;
+    font-size: 0.9rem;
     margin: 0 ;
     
 }
@@ -54,6 +54,7 @@
   flex-direction: column;
   margin: 0 -3;
   height: 3rem;
+  max-width: 8rem;
 }
 
 form .number-input-container{
@@ -63,7 +64,7 @@ padding: 5px;
 }
 form select, form input{
     display: block;
-    font-size: 15px;
+    font-size: 1.2rem;
     font-family: 'Poppins', sans-serif;
     outline: none;
     border: none;
@@ -72,6 +73,7 @@ form select, form input{
 }
 form input[type = text], form input[type = number],form input[type = date], form input::placeholder, select{
     color: #9a9a9a;
+   
 }
 form input[type = submit]:enabled{
     
