--- a/src/components/Home/Testimonials/Testimonials.css
+++ b/src/components/Home/Testimonials/Testimonials.css
@@ -1,6 +1,6 @@
 .testimo {
     padding:2rem;
-    margin: 2rem -15rem 0 -15rem;
+    margin: 2rem 0 0 0 ;
     background-color: var(--Gr);
     height:auto;
 }
