--- a/src/components/Home/About/About.css
+++ b/src/components/Home/About/About.css
@@ -1,6 +1,5 @@
 .About {
   background-color: var(--secondary);
-  margin: 0 -15rem;
   padding: 3em 15rem;
   display: flex;
   flex-wrap: wrap;
@@ -10,7 +9,7 @@
 
 .title_description {
   width: 40%;
-  padding: 2rem 2rem 2rem 10rem;
+  padding: 2rem;
   text-align: left;
 }
 
@@ -74,11 +73,12 @@ border-radius: 45px;
 /* Media Queries */
 @media only screen and (max-width: 860px) {
 .About {
-flex-wrap: wrap;
+display: block;
 padding: 3em 1rem;
 }
 .title_description {
-margin-left: 10rem;
+margin:0 0 0 5rem;
+width:fit-content;
 }
 .title_description h1 {
 font-size: 4rem;
